# warctools

./: .travis.yml  AGENTS.md  pyproject.toml
.github/workflows/: ci.yml
src/hanzo/: __init__.py  arc2warc.py  warc2warc.py  warcdump.py  warcextract.py  warcfilter.py  warcindex.py  warclinks.py  warcpayload.py  warcunpack.py  warcvalid.py
src/hanzo/httptools/: __init__.py  messaging.py  semantics.py
src/hanzo/httptools/tests/: parse_test.py
src/hanzo/warctools/: __init__.py  arc.py  archive_detect.py  log.py  mixed.py  record.py  s3.py  stream.py  warc.py
src/hanzo/warctools/tests/: test_warctools.py
src/warctools/: __init__.py
tests/: __init__.py  test_cli.py  test_integration.py
